# bolted

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  VISION.md  clippy.toml  mise.toml
.claude/memory/: MEMORY.md  a-drift-check-makes-a-mutation-pass-vacuous.md  a-forbidding-test-can-forbid-nothing.md  a-missing-prop-assume-asserts-the-bug.md  a-suite-with-one-implementor-is-shaped-like-it.md  a-surviving-mutation-is-two-hypotheses.md  art-gc-probes-need-a-control.md  artifact-svg-must-not-use-theme-tokens.md  askama-symlink-cargo-home-bug.md  bolt-driver-sibling-repo.md  bolted-check-analyses-split-on-runtime-facts.md  bolted-verify-in-a-real-browser.md  boltffi-bindgen-reads-source-text.md  compose-cannot-see-viewmodel-method-reads.md  csharp-backend-check-driver-broken.md  device-and-ui-tiers-are-proven-on-this-machine.md  echo-rule-predicate-is-touched-not-dirty.md  fable-plans-opus-implements.md  ide-diagnostics-lie-after-subagent-work.md  pr-based-workflow.md  subagents-stall-awaiting-own-background-runs.md  test-android-exit-code-masks-failures.md  the-core-ships-no-lock.md  thin-macros-push-behavior-into-the-core.md
android/bolted-http/: build.gradle.kts
android/bolted-http-conformance/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/gen-profile-smoke/: build.gradle.kts  settings.gradle.kts
android/profile-app/: build.gradle.kts  settings.gradle.kts
android/profile-probe/: build.gradle.kts  settings.gradle.kts
apple/bolted-http-conformance/: Package.swift
apple/gen-profile-smoke/: Package.swift
apple/profile-app/: Package.swift  project.yml
apple/profile-probe/: Package.swift
crates/bolted-check/: Cargo.toml
crates/bolted-check/src/: budget.rs  doctor.rs  lib.rs
crates/bolted-check/tests/: doctor_manifest.rs
crates/bolted-conformance/: Cargo.toml
crates/bolted-core/: Cargo.toml
crates/bolted-decl/: Cargo.toml
crates/bolted-decl/src/: entity.rs  feature.rs  lib.rs  naming.rs  rules.rs  value.rs
crates/bolted-ffi/: Cargo.toml
crates/bolted-ffi-gen/: Cargo.toml
crates/bolted-ffi-gen/src/: dto.rs  field.rs  foreign.rs  golden.rs  lib.rs  wrapper.rs
crates/bolted-ffi-gen/tests/: manifest.rs
crates/bolted-http/: Cargo.toml
crates/bolted-http-android-ffi/: Cargo.toml  boltffi.toml
crates/bolted-http-android-ffi/src/: lib.rs
crates/bolted-http-apple-ffi/: Cargo.toml  boltffi.toml
crates/bolted-http-apple-ffi/src/: lib.rs
crates/bolted-http-ffi/: Cargo.toml  boltffi.toml
crates/bolted-http-ffi/src/: lib.rs
crates/bolted-http-linux/: Cargo.toml
crates/bolted-http-linux/src/: error.rs  lib.rs  tls.rs
crates/bolted-http-linux/tests/: conformance.rs
crates/bolted-http/docs/: architecture.md  conformance-mutation-table.md  feature-matrix.md  platform-surfaces.md  prior-art.md  spike-packaging-report.md  spike-plan.md
crates/bolted-http/docs/research/: 2026-07-18-android.md  2026-07-18-apple.md  2026-07-18-linux.md  2026-07-18-web.md  2026-07-18-windows.md
crates/bolted-http/src/: capability.rs  error.rs  header.rs  lib.rs  redirect.rs  request.rs  response.rs  signal.rs  stream.rs
crates/bolted-http/src/conformance/: c1.rs  c2.rs  c3.rs  mock.rs  mod.rs  netmock.rs  server.rs  stream.rs  wire.rs
crates/bolted-macros/: Cargo.toml
crates/bolted-macros/src/: entity.rs  expand.rs  golden.rs  lib.rs  rules.rs  value.rs
crates/bolted-macros/tests/golden/: entity_note.rs  entity_profile.rs  rules_profile.rs  value_email.rs  value_username.rs
crates/fixture-note/: Cargo.toml
crates/fixture-profile/: Cargo.toml
crates/fixture-profile-ffi/: Cargo.toml  boltffi.toml
crates/fixture-profile-ffi/src/: dto.rs  lib.rs
crates/gen-note/: Cargo.toml  constraints.snap
crates/gen-note-ffi/: Cargo.toml  boltffi.toml
crates/gen-note-ffi/examples/: gen-note-constraints.rs
crates/gen-note-ffi/src/: generated.rs  lib.rs
crates/gen-note-ffi/tests/: constraint_snapshot.rs  drift.rs
crates/gen-profile/: Cargo.toml  constraints.snap
crates/gen-profile-ffi/: Cargo.toml  boltffi.toml
crates/gen-profile-ffi/examples/: gen-profile-constraints.rs
crates/gen-profile-ffi/src/: custom.rs  generated.rs  lib.rs
crates/gen-profile-ffi/tests/: constraint_snapshot.rs  drift.rs  wrapper.rs
crates/gen-profile/src/: lib.rs  value_types.rs
crates/gen-profile/tests/: conformance.rs  differential.rs
crates/profile-web/: Cargo.toml  index.html  wasm-budget.txt
crates/profile-web/src/: app.rs  controller.rs  l10n.rs  lib.rs  main.rs
crates/profile-web/tests/: controller.rs  web.rs
crates/spike-http-ffi/: Cargo.toml  README.md  boltffi.toml
crates/spike-note/: Cargo.toml
crates/spike-profile/: Cargo.toml
crates/spike-profile-ffi/: Cargo.toml  boltffi.toml
crates/spike-profile-ffi-stall-probe/: .gitignore  Cargo.toml  README.md  boltffi.toml
crates/spike-profile-ffi-stall-probe/consumer/: Package.swift
crates/spike-profile-ffi-stall-probe/consumer/Tests/SpikeProfileConsumerTests/: SpikeProfileTests.swift
crates/spike-profile-ffi-stall-probe/docs/: probe-report.md
crates/spike-profile-ffi-stall-probe/src/: lib.rs
crates/spike-profile-ffi/src/: dto.rs  lib.rs
csharp/profile-probe/: CallbackDriverProbe.cs  ClassHandleProbe.cs  LifecycleProbe.cs  ProfileProbe.csproj  SkeletonProbe.cs  StreamProbe.cs  TestSupport.cs  TypedErrorProbe.cs  nuget.config
docs/: ARCHITECTURE.md  CONFORMANCE.md  GLOSSARY.md  ROADMAP.md  VISION.md
docs/design/: architecture-core-evolution.md  bolt-driver-seam.md  contract-freeze-agenda.md  core-evolution-triage.md  streaming-seam.md
docs/steps/: step-01-core-semantics.md  step-01-report.md  step-02-boltffi-probe.md  step-02-report.md  (+71 more)
docs/steps/artifacts/step-27-bindgen-cfg-probe/scratch/: Cargo.toml  boltffi.toml
docs/steps/artifacts/step-27-bindgen-cfg-probe/scratch/src/: lib.rs
spikes/os-integration/crates/syncd/: Cargo.toml
spikes/os-integration/crates/syncd/src/: lib.rs  main.rs
spikes/os-integration/crates/syncd/tests/: probe.rs  systemd_activation.rs
upstream/boltffi/repro-05/: Cargo.toml  README.md
upstream/boltffi/repro-05/src/: lib.rs
(+173 files in other folders)
