[workspace]
resolver = "3"
members = [
    "crates/bolted-core",
    "crates/bolted-decl",
    "crates/bolted-http",
    "crates/bolted-macros",
    "crates/bolted-check",
    "crates/bolted-conformance",
    "crates/bolted-ffi",
    "crates/bolted-ffi-gen",
    "crates/spike-profile",
    "crates/spike-note",
    "crates/gen-note",
    "crates/gen-note-ffi",
    "crates/gen-profile",
    "crates/gen-profile-ffi",
    "crates/spike-profile-ffi",
    "crates/profile-web",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false
