[workspace]
resolver = "3"
members = [
    "crates/bolted-core",
    "crates/bolted-decl",
    "crates/bolted-http",
    "crates/bolted-http-linux",
    "crates/bolted-http-apple-ffi",
    "crates/bolted-macros",
    "crates/bolted-check",
    "crates/bolted-conformance",
    "crates/bolted-ffi",
    "crates/bolted-ffi-gen",
    "crates/spike-profile",
    "crates/spike-note",
    "crates/gen-note",
    "crates/gen-note-ffi",
    "crates/gen-profile",
    "crates/gen-profile-ffi",
    "crates/spike-profile-ffi",
    "crates/profile-web",
    # Step 18+ (Phase 5): the OS-integration spike campaign. Disposable — deleting the campaign is
    # `rm -rf spikes/os-integration` plus these three lines (spikes/os-integration/README.md).
    "spikes/os-integration/crates/sync-settings",
    "spikes/os-integration/crates/sync-wire",
    "spikes/os-integration/crates/syncd",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false
