[workspace]
resolver = "3"
members = [
    "crates/bolted-core",
    "crates/bolted-decl",
    "crates/bolted-http",
    "crates/bolted-http-linux",
    "crates/bolted-http-ffi",
    "crates/bolted-macros",
    "crates/bolted-check",
    "crates/bolted-conformance",
    "crates/bolted-ffi",
    "crates/bolted-ffi-gen",
    "crates/fixture-profile",
    "crates/fixture-note",
    "crates/gen-note",
    "crates/gen-note-ffi",
    "crates/gen-profile",
    "crates/gen-profile-ffi",
    "crates/fixture-profile-ffi",
    "crates/profile-web",
    # Step 18+ (Phase 5): the OS-integration spike campaign. Disposable — deleting the campaign is
    # `rm -rf spikes/os-integration` plus these three lines (spikes/os-integration/README.md).
    "spikes/os-integration/crates/sync-settings",
    "spikes/os-integration/crates/sync-wire",
    "spikes/os-integration/crates/syncd",
    # Step 28 (windowed-collections exploration): the collection-facet spike. Disposable — deleting
    # the spike is `rm -rf spikes/collection` plus this one line (spikes/collection/README.md).
    "spikes/collection/crates/collection-core",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false
