# Underscores: BoltFFI derives native symbol names from the crate name and rejects hyphens
# (spike-packaging-report friction F1). The directory keeps the hyphenated repo convention.
[package]
name = "bolted_http_android_ffi"
version.workspace = true
edition.workspace = true
publish = false

# Step 26 M0 — the Android harness bridge. This crate is NOT the shipped consumer-facing adapter:
# it is the conformance bridge (BoltFFI callback trait + driver + in-process test-server control)
# the instrumented ART tier drives via the generated Kotlin/JNI bindings. It therefore links
# `bolted-http`'s `conformance` feature (the suite + the TLS test server); a real shipped
# `bolted-http-android` would not. Mirrors `bolted-http-apple-ffi` exactly — the FFI surface is the
# decided topology (step 26 doc, "Decisions already taken"); the two crates diverge only in their
# `boltffi.toml` target and their generated-binding language.
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# The sans-io contract + the conformance harness (suite rows, RowResult, TestServer, Endpoints).
bolted-http = { path = "../bolted-http", features = ["conformance"] }
# Registry pin only (step 25: the step-23 git pin is killed). Matches gen-profile-ffi / apple-ffi.
boltffi = "0.27.5"
