# Underscores: BoltFFI derives native symbol names from the crate name and rejects hyphens
# (spike-packaging-report friction F1). The directory keeps the hyphenated repo convention.
[package]
name = "bolted_http_apple_ffi"
version.workspace = true
edition.workspace = true
publish = false

# Step 25 M0 — the Apple harness bridge. This crate is NOT the shipped consumer-facing adapter:
# it is the conformance bridge (BoltFFI callback trait + driver + in-process test-server control)
# the `swift test` tier drives. It therefore links `bolted-http`'s `conformance` feature (the suite
# + the TLS test server); a real shipped `bolted-http-apple` would not.
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# The sans-io contract + the conformance harness (suite rows, RowResult, TestServer, Endpoints).
bolted-http = { path = "../bolted-http", features = ["conformance"] }
# Registry pin only (step 25: the step-23 git pin is killed). Matches gen-profile-ffi.
boltffi = "0.28.0"
