# Underscores: BoltFFI derives native symbol names from the crate name and rejects hyphens
# (spike-packaging-report friction F1). The directory keeps the hyphenated repo convention.
[package]
name = "bolted_http_ffi"
version.workspace = true
edition.workspace = true
publish = false

# Step 27 M0 — the unified harness bridge (Apple + Android in ONE crate). This crate is NOT the
# shipped consumer-facing adapter: it is the conformance bridge (BoltFFI callback trait + driver +
# in-process test-server control) both the `swift test` (macOS) and instrumented-ART tiers drive via
# the generated bindings. It links `bolted-http`'s `conformance` feature (the suite + the TLS test
# server); a real shipped adapter would not. The two former bridge crates (`bolted-http-apple-ffi`,
# `bolted-http-android-ffi`) merged here once `PriorityHint` went uniform (Q10): their surfaces no
# longer diverge, so one crate packs both targets — the `gen-profile-ffi` (apple+android+csharp)
# precedent. The note-08 probe (docs/steps/artifacts/step-27-bindgen-cfg-probe) confirmed BoltFFI's
# bindgen emits the union of items regardless of target, so nothing here is cfg-gated per platform.
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# The sans-io contract + the conformance harness (suite rows, RowResult, TestServer, Endpoints).
bolted-http = { path = "../bolted-http", features = ["conformance"] }
# Registry pin only (step 25: the step-23 git pin is killed). Matches gen-profile-ffi.
boltffi = "0.28.0"
