# Package name uses underscores: BoltFFI derives native symbol names from the crate name and
# rejects hyphens (`invalid native symbol name boltffi_function_fixture-profile-ffi_ping`). The
# directory stays `fixture-profile-ffi` (step doc's path). Recorded as a finding in the report.
[package]
name = "fixture_profile_ffi"
version.workspace = true
edition.workspace = true
publish = false

# The only crate importing boltffi (the future `bolted-ffi`). staticlib + cdylib for the
# XCFramework; rlib so it still joins the cargo workspace for `cargo test`/clippy (the demo
# example does the same — recorded as a deviation from the step doc's two-type sketch).
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bolted-core = { path = "../bolted-core" }
fixture-profile = { path = "../fixture-profile" }
boltffi = "0.28.0"
