# Underscores: BoltFFI derives native symbol names from the crate name and rejects hyphens.
[package]
name = "gen_profile_ffi"
version.workspace = true
edition.workspace = true
publish = false

# `spike-profile-ffi`, generated. `src/generated.rs` is written by `mise run gen:ffi` from
# `gen-profile/src/lib.rs` and byte-checked on every `mise run check` (D22). `src/custom.rs` is the
# escape hatch: `DateRange` is a composite value object (D20), hand-written, so the generator refuses
# to guess its `#[data]` shape and demands one — a missing item is a compile error, not a wrong binding.
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bolted-core = { path = "../bolted-core" }
bolted_ffi = { path = "../bolted-ffi" }
gen-profile = { path = "../gen-profile" }
boltffi = "0.27.5"

[dev-dependencies]
bolted-ffi-gen = { path = "../bolted-ffi-gen" }
