[package]
name = "gen-profile"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bolted-core = { path = "../bolted-core" }
bolted-macros = { path = "../bolted-macros" }

[dev-dependencies]
bolted-conformance = { path = "../bolted-conformance" }
# The golden reference. `tests/differential.rs` drives both features through the same script and
# compares what they say — which is the only way "the generated code reproduces the spike" is a
# claim about behaviour rather than about a diff a human once read.
spike-profile = { path = "../spike-profile" }
proptest = "1"
